--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>my first ever website</h1>
     <p> Look sabitur! I can push to github</p>
+    <p> i am feeling happy</p>
+    <p> i am a ghost</p>
     
 </body>
 </html>
