done adding button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p> Look sabitur! I can push to github</p>
     <p> i am feeling happy</p>
     <p> i am a ghost</p>
+    <input type="text">
+    <br>
+    <button> click me baby</button>
     
 </body>
 </html>
